# This specifies which new Cargo.toml features are enabled.
cargo-features = ["edition2021"]

[package]
name = "rocket_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
