[package]
name = "rocket_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", features = ["json"] }
rusqlite = { version = "0.24.1", features = ["bundled"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
